# manhattan-reasoning-gym

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: agent.py  app.py  design.py
examples/bert_ffn/: README.md  client_sdk.py  model.py
examples/bert_ffn/tests/unit/: test_bert_ffn.py
examples/ffn_accel/: README.md  accel.py  client_sdk.py  conftest.py  design.py  golden.py  synth.py
examples/ffn_accel/tests/sim/: test_engine.py  test_ffn.py  test_mac_array.py  test_mmio.py  test_requant.py
examples/hello_wishbone/: README.md  client.py  client_sdk.py  design.py  stream_client_sdk.py
examples/hello_wishbone/tests/: test_hello_wishbone.py
examples/notebooks/: 01_build_and_run.ipynb  02_sandboxing.ipynb
examples/sat_solver/: README.md  client.py  client_sdk.py  design.py
examples/sat_solver/tests/sim/: test_sat_solver.py
examples/sat_solver/tests/unit/: test_network_stack.c  (+1 more)
examples/verilog_hello/: README.md  client.py  client_sdk.py  design.v
examples/verilog_hello/tests/: test_verilog_hello.py
src/manhattan_reasoning_gym/: __init__.py  _app.py  _broker_client.py  _cli.py  _client.py  _credentials.py  _local_build.py  _oauth.py  _progress.py  _report.py  _wire.py  build.py  cloud.py  sandbox.py
src/manhattan_reasoning_gym/bench/: __init__.py  __main__.py  launcher.py  sandbox.py  silicon.py
tests/unit/: test_app_creds.py  test_auth_cli.py  test_cli.py  test_client.py  test_credentials.py  test_local_build.py  test_namespaces.py  test_oauth.py  test_progress.py  test_selection.py  test_stream.py  test_wire.py
